crates/shell-parser/tests/snapshots/parser_snapshots__substitution__arithmetic_expansion.snap
---
source: tests/parser_snapshots.rs
expression: "parse(\"echo $((1 + 2))\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Arithmetic {
                        source: "1 + 2",
                        span: Span {
                            start: 8,
                            end: 13,
                        },
                    },
                ],
            },
        ],
        redirections: [],
    },
)
