crates/shell-parser/tests/snapshots/parser_snapshots__substitution__command_sub_backtick.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"echo `whoami`\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    Backtick {
                        source: "whoami",
                        span: Span {
                            start: 6,
                            end: 12,
                        },
                    },
                ],
            },
        ],
        redirections: [],
    },
)
