crates/shell-parser/tests/snapshots/parser_snapshots__substitution__command_sub_dollar.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"echo $(whoami)\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "echo",
                    ),
                ],
            },
            Word {
                parts: [
                    CommandSubstitution {
                        source: "whoami",
                        span: Span {
                            start: 7,
                            end: 13,
                        },
                    },
                ],
            },
        ],
        redirections: [],
    },
)
