crates/shell-parser/tests/snapshots/parser_snapshots__substitution__process_sub_input.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"diff <(sort a) <(sort b)\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "diff",
                    ),
                ],
            },
            Word {
                parts: [
                    ProcessSubstitution {
                        direction: Input,
                        command: "sort a",
                        span: Span {
                            start: 7,
                            end: 13,
                        },
                    },
                ],
            },
            Word {
                parts: [
                    ProcessSubstitution {
                        direction: Input,
                        command: "sort b",
                        span: Span {
                            start: 17,
                            end: 23,
                        },
                    },
                ],
            },
        ],
        redirections: [],
    },
)
