crates/shell-parser/tests/snapshots/parser_snapshots__substitution__process_sub_output.snap
---
source: crates/shell-parser/tests/parser_snapshots.rs
expression: "parse(\"tee >(grep foo) >(grep bar)\")"
---
Simple(
    SimpleCommand {
        assignments: [],
        words: [
            Word {
                parts: [
                    Literal(
                        "tee",
                    ),
                ],
            },
            Word {
                parts: [
                    ProcessSubstitution {
                        direction: Output,
                        command: "grep foo",
                        span: Span {
                            start: 6,
                            end: 14,
                        },
                    },
                ],
            },
            Word {
                parts: [
                    ProcessSubstitution {
                        direction: Output,
                        command: "grep bar",
                        span: Span {
                            start: 18,
                            end: 26,
                        },
                    },
                ],
            },
        ],
        redirections: [],
    },
)
